# youtube-multi-dl

./: .gitignore  LICENSE  Makefile  README.md  RELEASES.md  main.py  pre-push  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py
examples/chapters_file/: chapters.csv  chapters.json  chapters_end_time.csv  chapters_end_time.json
skills/youtube-multi-dl/: SKILL.md
skills/youtube-music-dl/: SKILL.md
tests/: conftest.py  test_downloader.py  test_offline.py  test_sample.py  test_youtube.py
tests/fixtures/: DESCRIPTION-structured-chapters.txt  DESCRIPTION-unstructured-tracklist.txt  README.md  fixtures.json  generate.sh
youtube_dl_playlist/: __init__.py  command_line.py  downloader.py
youtube_multi_dl/: command_line.py  downloader.py  schema.py  tagging.py
youtube_music_dl/: command_line.py  downloader.py  schema.py  tagging.py
