[project]
name = "youtube-multi-dl"
version = "2.0.0"
description = "Download and label albums and playlists from YouTube using yt-dlp"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["youtube", "yt-dlp", "mp3", "download", "playlist", "album", "chapters", "file", "id3"]
authors = [{ name = "kylebebak", email = "kylebebak@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "yt-dlp",
    "mutagen>=1.42.0,<2",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/fortana-co/youtube-multi-dl"

[project.scripts]
youtube-multi-dl = "youtube_multi_dl.command_line:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_multi_dl"]

[dependency-groups]
dev = ["ruff", "pyright"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# pycodestyle errors (E), pyflakes (F), isort import sorting (I)
select = ["E", "F", "I"]
