[project]
name = "youtube-multi-dl"
version = "3.1.0"
description = "DEPRECATED — renamed to youtube-music-dl. Download and label albums and playlists from YouTube."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["youtube", "yt-dlp", "opus", "mp3", "download", "playlist", "album", "chapters", "file", "id3"]
authors = [{ name = "kylebebak", email = "kylebebak@gmail.com" }]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "yt-dlp[default]",
    "mutagen>=1.42.0,<2",
    "packaging",
    "jsonschema>=4",
]

[project.urls]
Homepage = "https://github.com/fortana-co/youtube-multi-dl"

[project.scripts]
youtube-multi-dl = "youtube_multi_dl.command_line:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_multi_dl"]

# ship the agent skill inside the package so `--print-skill` works post-install
[tool.hatch.build.targets.wheel.force-include]
"skills/youtube-multi-dl/SKILL.md" = "youtube_multi_dl/SKILL.md"

[dependency-groups]
dev = ["ruff", "pyright", "pytest>=8"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# pycodestyle errors (E), pyflakes (F), isort import sorting (I)
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "youtube: tests that download from YouTube (skipped unless fixtures.json is populated)",
]
