[project]
name = "youtube-music-dl"
version = "4.3.0"
description = "Download and label albums and playlists from YouTube using yt-dlp"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["youtube", "yt-dlp", "opus", "mp3", "download", "playlist", "album", "chapters", "agent", "ai"]
authors = [{ name = "kylebebak", email = "kylebebak@gmail.com" }]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "yt-dlp[default]",
    "mutagen>=1.42.0,<2",
    "packaging",
    "jsonschema>=4",
]

[project.urls]
Homepage = "https://github.com/fortana-co/youtube-music-dl"

[project.scripts]
youtube-music-dl = "youtube_music_dl.command_line:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# allowlist for the source distribution (.tar.gz), to ensure stray files not in published sdist
[tool.hatch.build.targets.sdist]
include = [
    "/youtube_music_dl",
    "/skills",
    "/tests",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["youtube_music_dl"]

# ship the agent skill inside the package so `--print-skill` works post-install
[tool.hatch.build.targets.wheel.force-include]
"skills/youtube-music-dl/SKILL.md" = "youtube_music_dl/SKILL.md"

[dependency-groups]
dev = ["ruff", "pyright", "pytest>=8"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# pycodestyle errors (E), pyflakes (F), isort import sorting (I)
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = [
    "youtube: tests that download from YouTube (skipped unless fixtures.json is populated)",
]
